# hackerfoods

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
accounts/: urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: accounts_home.html  login.html  signup.html
accounts/templates/full/: accounts_home_full.html  login_full.html  signup_full.html
hackerfoods/: asgi.py  settings.py  urls.py  wsgi.py
hackerfoods_app/: admin.py  apps.py  models.py  urls.py  views.py
hackerfoods_app/migrations/: 0001_initial.py  0002_ingredient_remove_recipe_ingredients_and_more.py
hackerfoods_app/templates/: about.html  app_base.html  base.html  home.html  recipe.html  recipe_detail.html  recipes.html
hackerfoods_app/templates/full/: about_full.html  home_full.html  recipe_detail_full.html  recipes_full.html
templates/: base.html
