[tool.poetry]
name = "hackerfoods"
version = "0.1.0"
description = ""
authors = ["stefkn <stefan.k.nowak@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.4.8"
django = "^5.0.6"
mypy = "^1.10.0"
pillow = "^10.3.0"
django-htmx = "^1.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
